--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@
     -webkit-filter: grayscale(100%);
     filter: gray;
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+    z-index: -1;
 }
 
 @keyframes fadeIn {
@@ -111,6 +112,65 @@
       transform: scale(0)
     }
   }
+
+.arrowContainer {
+    position: absolute;
+    display: inline-block;
+    vertical-align: middle;
+    bottom: 5%;
+    text-align: center;
+}
+
+.headerArrow {
+    width: 4em;
+    height: 4em;
+    border: 0.4em solid white;
+    border-radius: 50%;
+}
+
+.headerArrow:after {
+    content: '';
+    display: inline-block;
+    margin-top: 20%;
+    width: 1.4em;
+    height: 1.4em;
+    border-top: 0.5em solid white;
+    border-right: 0.5em solid white;
+    border-radius: 3px;
+    opacity: 0.8;
+    -moz-transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+    transform: rotate(135deg);
+  }
+
+.headerArrowRipple {
+    position: absolute;
+    top: 0%;
+    width: 4em;
+    height: 4em;
+    border: 0.4em solid white;
+    border-radius: 50%;
+    animation: ripple 6s forwards;
+    transform: scale(1);
+}
+
+@keyframes ripple {
+    0% {
+      transform: scale(1)
+    }
+    80% {
+      transform: scale(1);
+      opacity: 0.8;
+    }
+    99% {
+      transform: scale(5);
+      opacity: 0;
+  }
+    100% {
+      transform: scale(0); 
+      opacity: 0;
+    }
+}
 
 body {
     margin: 0;
