--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,15 @@
     box-sizing: inherit;
 }
 
+html {
+    margin: 0;
+}
+
+body {
+    margin: 0;
+}
+
 .header {
-    width: 100vw;
     height: 100vh;
     display: flex;
     position: relative;
@@ -172,6 +179,54 @@
     }
 }
 
-body {
-    margin: 0;
+.main {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    background-color: ghostwhite;
+}
+
+section {
+    height: 90vh;
+    /* background-color: blue;
+    border: solid white; */
+    flex-grow: 1;
+}
+
+.aboutMe {
+
+}
+
+.skills {
+
+}
+
+.interests {
+
+}
+
+.sectionLine {
+    width: 3px;
+    height: 20vh;
+    background-color: black;
+    border-radius: 80%;
+    opacity: 0.2;
+}
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 10vh;
+    background: rgb(248,248,255);
+    background: linear-gradient(90deg, rgba(248,248,255,1) 0%, rgba(239,239,242,1) 50%, rgba(248,248,255,1) 100%);
+}
+
+.footerLine {
+    width: 70vw;
+    height: 2px;
+    background-color: black;
+    border-radius: 80%;
+    opacity: 0.2;
+    position: absolute;
 }
