--- a/styles.css
+++ b/styles.css
@@ -191,8 +191,8 @@ body {
 }
 
 .main {
-    display: flex;
-    flex-flow: row nowrap;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr auto 1fr;
     align-items: center;
     background-color: grey;
 }
