--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 :root {
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 *,
@@ -212,18 +213,38 @@ section {
     align-items: center;
     justify-content: center;
     position: relative;
-    color: rgba(0, 0, 0, 0);
-    animation: iconClickText 6s forwards;
+    
+}
+
+
+#aboutMe {
+    color: #C6FFDD;
+}
+
+#skills {
+    color: #FBD786;
+}
+
+#interests {
+    color: #f7797d;
+}
+
+p {
+    position: absolute;
+    display: none;
+    opacity: 0;
+    margin: 0.8em;
+    font-size: 1.2em;
 }
 
 @keyframes iconClickText {
     0% {
     }
     50% {
-  color: rgba(0, 0, 0, 0);
-  }
+    opacity: 0;
+    }
     100% {
-  color: rgba(0, 0, 0, 1);
+    opacity: 1;
     } 
 }
 
