--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,7 @@ body {
     position: absolute;
     background-color: gray;
     width: 100%;
-    height: 90%;   
+    height: 100%;   
     z-index: -5;
 }
 
@@ -213,28 +213,53 @@ section {
     align-items: center;
     justify-content: center;
     position: relative;
-    
+    overflow: hidden;
 }
 
+.textContent {
+    margin-top: 1em;
+    display: none;
+    position: absolute;
+    opacity: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    mask: linear-gradient(#fff, 95%, transparent);
+}
 
-#aboutMe {
+.textContent::-webkit-scrollbar {
+    display: none;
+  }
+
+h1 {    
+    font-style: bold;
+    font-size: 4em;
+    margin: 1em auto 0.5em;
+    font-weight: 700;
+    text-align: center;
+}
+
+#aboutMe h1 {
     color: #C6FFDD;
 }
 
-#skills {
+#skills h1 {
     color: #FBD786;
 }
 
-#interests {
+#interests h1 {
     color: #f7797d;
 }
 
 p {
-    position: absolute;
-    display: none;
-    opacity: 0;
-    margin: 0.8em;
-    font-size: 1.2em;
+    /* position: absolute; */
+    margin: 1em;
+    font-size: 1.4em;
+    line-height: 1.2;
+    text-align: justify;
+    color: ghostwhite;
 }
 
 @keyframes iconClickText {
@@ -342,7 +367,7 @@ footer {
     flex-direction: row;
     justify-content: center;
     height: 10vh;
-    background-color: grey;
+    background: linear-gradient(gray 0%, 80%, lightgray 95%);
 }
 
 .footerLine {
