--- a/styles.css
+++ b/styles.css
@@ -236,9 +236,10 @@ section {
 h1 {    
     font-style: bold;
     font-size: 4em;
-    margin: 1em auto 0.5em;
+    margin: 0.5em auto 0.5em;
     font-weight: 700;
     text-align: center;
+    letter-spacing: -0.06em;
 }
 
 #aboutMe h1 {
@@ -257,9 +258,10 @@ p {
     /* position: absolute; */
     margin: 1em;
     font-size: 1.4em;
-    line-height: 1.2;
+    line-height: 1.3;
     text-align: justify;
     color: ghostwhite;
+    letter-spacing: 0.02em;
 }
 
 @keyframes iconClickText {
