--- a/styles.css
+++ b/styles.css
@@ -266,6 +266,7 @@ p {
 
 #skills p {
     font-size: 1.6em;
+    margin-left: 10%;
 }
 
 ul {
@@ -273,8 +274,19 @@ ul {
     color: ghostwhite;
     font-size: 1.1em;
     font-weight: 1;
-    margin-left: 3em;
+    margin-left: 15%;
 }
+
+.progressBar {
+     position: relative;
+     bottom: 0.4em;
+    height: 0.5em;
+    background-color: #eee;
+    border-radius: 2px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+    opacity: 0.5;
+    margin-left: 5%;
+  }
 
 @keyframes iconClickText {
     0% {
