--- a/styles.css
+++ b/styles.css
@@ -273,22 +273,36 @@ ul {
     list-style-type: circle;
     color: ghostwhite;
     font-size: 1.1em;
-    line-height: 1.2;
+    line-height: 1.3;
     font-weight: 1;
     margin-left: 10%;
-    margin-right: 5%;
+    margin-right: 10%;
 }
 
-.progressBar {
-     position: relative;
-     bottom: 0.4em;
-    height: 0.5em;
-    background-color: #eee;
-    border-radius: 2px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
-    opacity: 0.5;
-    margin-left: 5%;
+.progressBarOuter {
+    margin: 0.3em 0 0.5em 1.1em;
+    position: relative;
+    display: flex;
+    width: 8em;
+    height: 0.7em;
+    background: rgba(0, 0, 0, 1);
+    border: solid #d5d5d5 0.1em;
+    border-radius: 999px;
+    align-items: center;
+    box-shadow: inset -2px 2px 10px 3px grey;
   }
+  
+  .progressBarInner {
+    display: inline-block;
+    height: 65%;
+    margin-left: 3%;
+    padding-left: 40%;
+    border-radius: 999px;
+    background: linear-gradient(128deg, rgba(123,223,242,1) 0%, rgba(247,214,224,1) 100%);
+    box-shadow: inset -1px 2px 5px 0px grey
+  }
+
+
 
 @keyframes iconClickText {
     0% {
