--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
     margin: 0;
 }
 
+/* Hero */
 .header {
     height: 100vh;
     display: flex;
@@ -54,6 +55,7 @@ body {
     }
 }
 
+/* Tiarama logo & animation */
 .logo {
     display: flex;
     flex-direction: row;
@@ -126,6 +128,7 @@ body {
     }
   }
 
+/* Scroll down button */
 .arrowContainer {
     position: absolute;
     display: inline-block;
@@ -224,8 +227,8 @@ section {
     height: 100%;
     width: 100%;
     overflow: auto;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
     mask: linear-gradient(#fff, 95%, transparent);
 }
 
@@ -255,7 +258,6 @@ h1 {
 }
 
 p {
-    /* position: absolute; */
     margin: 1em;
     font-size: 1.4em;
     line-height: 1.3;
@@ -302,7 +304,7 @@ ul {
   }
 
 
-
+/* Section icons & onClick animations */
 @keyframes iconClickText {
     0% {
     }
@@ -332,19 +334,20 @@ ul {
     border: 30em solid grey;
     }
     100% {
-    width: 55em;
-    height: 55em;
+    width: 58em;
+    height: 58em;
     border: 1em solid grey;
     }
 }
 
 .sectionGradient {
     position: absolute;
-    background: #C6FFDD;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #f7797d, #FBD786, #C6FFDD); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
-    width: 100%;
-    height: 100%;
+    background: #C6FFDD;
+    background: -webkit-linear-gradient(to right, #f7797d, #FBD786, #C6FFDD);
+    background: linear-gradient(to right, #f7797d, #FBD786, #C6FFDD); 
+    width: 58em;
+    height: 58em;
+    border-radius: 50%;
     z-index: -6;
 }
 
