--- a/styles.css
+++ b/styles.css
@@ -307,7 +307,7 @@ ul {
   }
 
 
-/* Section icon click animations & icon properties*/
+/* Section click animations */
 @keyframes iconClickText {
     0% {
     }
@@ -374,9 +374,15 @@ ul {
     }
 }
 
+/* icon properties */
 .icon * {
     fill: ghostwhite;
     filter: drop-shadow( 5px 3px 5px rgba(0, 0, 0, .7));
+}
+
+/* Second icon classes work in chrome */
+.icon {
+    filter: drop-shadow( 1px 0.5px 1px rgba(0, 0, 0, .7));
 }
 
 .aboutMeIcon:hover * {
@@ -384,14 +390,26 @@ ul {
     filter: drop-shadow( 0 0 150px rgba(198, 255, 221, .7));
 }
 
+.aboutMeIcon:hover {
+    filter: drop-shadow( 0 0 25px rgba(198, 255, 221, .7));
+}
+
 .skillsIcon:hover * {
     fill: #FBD786;
     filter: drop-shadow( 0 0 150px rgba(251, 215, 134, .7));
 }
 
+.skillsIcon:hover {
+    filter: drop-shadow( 0 0 25px rgba(251, 215, 134, .7));
+}
+
 .interestsIcon:hover * {
     fill: #f7797d;
     filter: drop-shadow( 0 0 150px rgba(247, 121, 125, .7));
+}
+
+.interestsIcon:hover {
+    filter: drop-shadow( 0 0 25px rgba(247, 121, 125, .7));
 }
 
 @keyframes iconClick {
