--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ body {
 
 .mainBG {
     position: absolute;
-    background-color: #4d4d4d;
+    background-color: #1e1d1d;
     width: 100%;
     height: 100%;   
     z-index: -5;
@@ -264,7 +264,7 @@ p {
     font-size: 1.4em;
     line-height: 1.3;
     text-align: justify;
-    color: ghostwhite;
+    color: #D9D9BF;
     letter-spacing: 0.02em;
 }
 
@@ -278,7 +278,7 @@ sup {
 }
 
 ul {
-    color: ghostwhite;
+    color: #D9D9BF;
     font-size: 1.1em;
     line-height: 1.3;
     font-weight: 1;
@@ -329,7 +329,7 @@ ul {
     position: absolute;
     width: 0em;
     height: 0em;
-    border: 30em solid #4d4d4d;
+    border: 30em solid #1e1d1d;
     border-radius: 50%;
     z-index: -3;
 }
@@ -338,12 +338,12 @@ ul {
     0% {
     width: 0em;
     height: 0em;
-    border: 30em solid #4d4d4d;
+    border: 30em solid #1e1d1d;
     }
     100% {
     width: 58em;
     height: 58em;
-    border: 1em solid #4d4d4d;
+    border: 1em solid #1e1d1d;
     }
 }
 
@@ -362,7 +362,7 @@ ul {
     display: none;
     box-sizing: content-box;
     position: absolute;
-    background-color: #4d4d4d;
+    background-color: #1e1d1d;
     width: 0em;
     height: 0em;
     border-radius: 50%;
@@ -380,7 +380,7 @@ ul {
 
 /* icon properties */
 .icon * {
-    fill: ghostwhite;
+    fill: #D9D9BF;
     filter: drop-shadow( 5px 3px 5px rgba(0, 0, 0, .7));
 }
 
@@ -430,7 +430,7 @@ ul {
 .sectionLine {
     width: 3px;
     height: 20vh;
-    background-color: ghostwhite;
+    background-color: #D9D9BF;
     border-radius: 80%;
     opacity: 0.2;
 }
@@ -444,21 +444,17 @@ footer {
     background: linear-gradient(to right, #C6FFDD , #FBD786, #f7797d)
 }
 
-a {
-    
-}
-
 .footerLine {
     width: 70vw;
     height: 2px;
-    background-color: ghostwhite;
+    background-color: #D9D9BF;
     border-radius: 80%;
     opacity: 0.2;
     position: absolute;
 }
 
 .footerContent {
-    background: linear-gradient(#4d4d4d 0%, 94%, transparent 99%);
+    background: linear-gradient(#1e1d1d 0%, 94%, transparent 99%);
     display: flex;
     height: 100%;
     width: 100vw;
