--- a/styles.css
+++ b/styles.css
@@ -264,7 +264,7 @@ p {
     font-size: 1.4em;
     line-height: 1.3;
     text-align: justify;
-    color: #D9D9BF;
+    color: #f5f5f5;
     letter-spacing: 0.02em;
 }
 
@@ -278,7 +278,7 @@ sup {
 }
 
 ul {
-    color: #D9D9BF;
+    color: #f9f9f9;
     font-size: 1.1em;
     line-height: 1.3;
     font-weight: 1;
@@ -380,7 +380,7 @@ ul {
 
 /* icon properties */
 .icon * {
-    fill: #D9D9BF;
+    fill: ghostwhite;
     filter: drop-shadow( 5px 3px 5px rgba(0, 0, 0, .7));
 }
 
