--- a/styles.css
+++ b/styles.css
@@ -432,7 +432,7 @@ ul {
         width: 0;
         border-radius: 50%;
         transition: height 0.3s, width 0.3s;
-        filter: drop-shadow( 0 0 0.5em rgb(198, 255, 221))
+        filter: drop-shadow( 0 0 1em white)
     }
 
     li:hover>img {
